--- a/pkp-lib/locale/en_US/common.xml
+++ b/pkp-lib/locale/en_US/common.xml
@@ -400,6 +400,7 @@
 	<message key="search.operator.or">or</message>
 	<message key="search.searchAllCategories">Search for</message>
 	<message key="search.searchCategories">Search categories</message>
+	<message key="search.searchResults">Search Results</message>
 	<message key="search.subject">Keyword(s)</message>
 	<message key="search.titleIndex">Browse Title Index</message>
 	<message key="search.title">Title</message>
