--- a/pkp-lib/locale/en_US/user.xml
+++ b/pkp-lib/locale/en_US/user.xml
@@ -96,6 +96,11 @@
 	<message key="user.profile">Profile</message>
 	<message key="user.profile.publicProfile">User Profile</message>
 	<message key="user.profile.repeatNewPassword">Repeat new password</message>
+	<!-- Login -->
+	<message key="user.login.registerNewAccount">Not a user? Register with this site</message>
+	<message key="user.login.resetPasswordInstructions"><![CDATA[For security reasons, this system emails a reset password to registered users, rather than recalling the
+current password.<br /><br />Enter your email address below to reset your password. A confirmation will be sent to this email address.]]></message>
+
 	<message key="user.register.form.emailExists">The selected email address is already in use by another user.</message>
 	<message key="user.register.form.passwordsDoNotMatch">The passwords do not match.</message>
 	<message key="user.register.form.emailsDoNotMatch">The email address fields do not match.</message>
