--- a/ops/locale/ml_IN/emailTemplates.xml
+++ b/ops/locale/ml_IN/emailTemplates.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE email_texts SYSTEM "../../lib/pkp/dtd/emailTemplateData.dtd">
 <!--
-  * emailTemplateData.xml
+  * locale/ml_IN/emailTemplateData.xml
   *
   * Copyright (c) 2003-2012 John Willinsky
   * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
@@ -9,7 +9,7 @@
   * Localized email templates XML file.
   *
   -->
-<email_texts locale="en_US">
+<email_texts locale="ml_IN">
 	<email_text key="NOTIFICATION">
 		<subject>{$siteTitle}ഇല്‍ നിന്ന് പുതിയ അറിയിപ്പ്</subject>
 		<body>{$siteTitle}ഇല്‍ നിന്ന് താങ്കള്‍ക്ക് ഒരു പുതിയ അറിയിപ്പുണ്ട്:
