--- a/ops/locale/ml_IN/manager.xml
+++ b/ops/locale/ml_IN/manager.xml
@@ -2,7 +2,7 @@
 <!DOCTYPE locale SYSTEM "../../lib/pkp/dtd/locale.dtd">
 
 <!--
-  * ojs2-devel/locale/en_US/manager.xml
+  * locale/ml_IN/manager.xml
   *
   * Copyright (c) 2003-2012 John Willinsky
   * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
