--- a/ops/plugins/blocks/relatedItems/locale/id_ID/locale.xml
+++ b/ops/plugins/blocks/relatedItems/locale/id_ID/locale.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE locale SYSTEM "../../../../../lib/pkp/dtd/locale.dtd">
 
+<!--
+  * locale/id_ID/locale.xml
+  *
+  * Copyright (c) 2003-2012 John Willinsky
+  * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
+  *
+  * Localization strings.
+  -->
+
 <locale name="id_ID" full_name="Indonesia">
 	<message key="plugins.block.relatedItems.displayName">Blok Item Terkait</message>
 	<message key="plugins.block.relatedItems.description">Plugin ini menampilkan blok yang berisi item terkait di bagian alat membaca.</message>
