--- a/ops/plugins/gateways/resolver/locale/id_ID/locale.xml
+++ b/ops/plugins/gateways/resolver/locale/id_ID/locale.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE locale SYSTEM "../../../../../lib/pkp/dtd/locale.dtd">
 
+<!--
+  * locale/id_ID/locale.xml
+  *
+  * Copyright (c) 2003-2012 John Willinsky
+  * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
+  *
+  * Localization strings.
+  -->
+
 <locale name="id_ID" full_name="Indonesia">
 	<message key="plugins.gateways.resolver.displayName"> Plugin Resolver </message> 
 	<message key="plugins.gateways.resolver.description"> Plugin ini memisahkan terbitan dan artikel berdasarkan informasi kutipan.</message>	<message key="plugins.gateways.resolver.errors.errorMessage"> Tidak bisa memisahkan kesatuan tunggal dengan menggunakan informasi kutipan. Pastikan informasi kutipan dapat dimengerti dan mengacu ke kesatuan tunggal dalam penempatan jurnal ini.</message> 
