--- a/ops/plugins/generic/openAds/locale/id_ID/locale.xml
+++ b/ops/plugins/generic/openAds/locale/id_ID/locale.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE locale SYSTEM "../../../../../lib/pkp/dtd/locale.dtd">
 
- 
-<locale name="Id_ID" full_name="Indonesia">
+<!--
+  * locale/id_ID/locale.xml
+  *
+  * Copyright (c) 2003-2012 John Willinsky
+  * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
+  *
+  * Localization strings.
+  -->
+
+<locale name="id_ID" full_name="Indonesia">
 	<message key="plugins.generic.openads.description"> Plugin OpenAds bisa membuat iklan dinamis dari server iklan OpenAds untuk diselipkan ke dalam IOJS.</message> 
 	<message key="plugins.generic.openads.descriptionUnconfigured"><![CDATA[Plugin OpenAds membuat iklan dinamis dari server iklan OpenAds untuk diselipkan ke dalam IOJS. Baca file README di plugin/generic/openAds untuk informasi untuk mengaktifkan plugin ini.</strong>]]></message> 
 
