--- a/ops/plugins/oaiMetadataFormats/marcxml/locale/id_ID/locale.xml
+++ b/ops/plugins/oaiMetadataFormats/marcxml/locale/id_ID/locale.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE locale SYSTEM "../../../../../lib/pkp/dtd/locale.dtd">
 
+<!--
+  * locale/id_ID/locale.xml
+  *
+  * Copyright (c) 2003-2012 John Willinsky
+  * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
+  *
+  * Localization strings.
+  -->
+
 <locale name="id_ID" full_name="Indonesia">
 	<message key="plugins.OAIMetadata.marcxml.displayName"> Format metadata MARC21</message> 
 	<message key="plugins.OAIMetadata.marcxml.description"> Menyusun metadata agar konsisten dengan format MARC21.</message>
