--- a/ops/plugins/paymethod/manual/locale/id_ID/locale.xml
+++ b/ops/plugins/paymethod/manual/locale/id_ID/locale.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE locale SYSTEM "../../../../../lib/pkp/dtd/locale.dtd">
 
+<!--
+  * locale/id_ID/locale.xml
+  *
+  * Copyright (c) 2003-2012 John Willinsky
+  * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
+  *
+  * Localization strings.
+  -->
+
 <locale name="id_ID" full_name="Indonesia">	<message key="plugins.paymethod.manual.displayName"> Pembayaran Biaya Manual </message> 
 	<message key="plugins.paymethod.manual.description"> Manajer secara manual akan mencatat kwitansi dari pembayaran pengguna (di luar perangkat lunak ini).</message>
 	<message key="plugins.paymethod.manual"> Pembayaran Biaya Manual </message> 
