--- a/pkp-lib/locale/en_US/manager.xml
+++ b/pkp-lib/locale/en_US/manager.xml
@@ -57,6 +57,8 @@
 	<message key="manager.announcementTypes.form.typeNameRequired">An announcement type name is required.</message>
 	<message key="manager.announcementTypes.noneCreated">No announcement types have been created.</message>
 	<message key="manager.announcementTypes.typeName">Announcement Type</message>
+	<message key="manager.publication.submissionStage">Submission</message>
+	<message key="manager.publication.emails">Emails</message>
 	<message key="manager.emails.confirmDelete">Are you sure you want to delete this email template?</message>
 	<message key="manager.emails.confirmReset">Are you sure you want to reset this email template to its default values?</message>
 	<message key="manager.emails.addEmail">Add Email Template</message>
