--- a/ojs/locale/en_US/manager.xml
+++ b/ojs/locale/en_US/manager.xml
@@ -149,6 +149,8 @@
 	<message key="manager.sections.wordCount">Word Count</message>
 	<message key="manager.sections.wordCountInstructions">Limit abstract word counts for this section (0 for no limit): </message>
 	<message key="manager.setup">Setup</message>
+	<message key="manager.setup.masthead">Masthead</message>
+	<message key="manager.setup.masthead.description">The Masthead should contain a list of editors, managing directors, and other individuals associated with the journal. Information entered here will appear in About the Journal.</message>
 	<message key="manager.setup.sponsors.description">The name of the organizations (e.g., scholarly associations, university departments, cooperatives, etc.) sponsoring the journal will appear in About the Journal and may be accompanied by a note of acknowledgement.</message>
 	<message key="manager.setup.appearanceDescription">Various components of the journal appearance can be configured from this page, including header and footer elements, the journal style and theme, and how lists of information are presented to users.</message>
 	<message key="manager.setup.homepageContent">Journal Homepage Content</message>
